updated background color and note style

--- a/src/component/NoteInputStyle.css
+++ b/src/component/NoteInputStyle.css
@@ -1,6 +1,17 @@
+*{
+  background-color:burlywood
+}
+
 .button{
   font-style: normal;
   font-size: larger;
   font-weight: bolder;
   background-color: grey;
+}
+
+.noteHeader{
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+  justify-content: end;
+  background-color: yellow;
 }
