--- a/src/component/NoteInputStyle.css
+++ b/src/component/NoteInputStyle.css
@@ -24,6 +24,22 @@ position: relative;
 transition:0.5s;
 }
 
+button span:after {
+content: '\00bb';
+position: absolute;
+opacity: 0;
+top: 0;
+right: -20px;
+transition: 0.5;  
+}
+.button:hover span {
+  padding-right: 35px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
 
 
 .noteHeader{
