--- a/src/component/NoteInputStyle.css
+++ b/src/component/NoteInputStyle.css
@@ -1,10 +1,17 @@
-*{
-  background-color:burlywood
+
+.header{
+  display: inline-block;
+  border-radius: 80px 2px 80px;
+  background-color: rgb(66, 66, 152);
+  font-size:50px;
+}
+.noteHeader{
+  display:grid;
 }
 
 .button{
   display: inline-block;
-  border-radius: 4px;
+  border-radius: 150px 25px;
   background-color: bisque;
   border: none;
   color:cadetblue;
@@ -47,4 +54,8 @@ transition: 0.5;
   font-weight: bold;
   justify-content: end;
   background-color: yellow;
+}
+
+li{
+ font-weight: bolder;
 }
