--- a/src/component/NoteInputStyle.css
+++ b/src/component/NoteInputStyle.css
@@ -5,9 +5,6 @@
   background-color: rgb(66, 66, 152);
   font-size:50px;
 }
-.noteHeader{
-  display:grid;
-}
 
 .button{
   display: inline-block;
@@ -50,10 +47,18 @@ transition: 0.5;
 
 
 .noteHeader{
-  font-family: 'Times New Roman', Times, serif;
+  font-family:Arial, Helvetica, sans-serif;
   font-weight: bold;
+  display: grid;
   justify-content: end;
-  background-color: yellow;
+ border-color: black;
+
+ padding-right: 11%;
+  border-radius: 15px 20px 11px;
+}
+
+i{
+  background-color:yellow;
 }
 
 li{
