--- a/src/component/NoteInputStyle.css
+++ b/src/component/NoteInputStyle.css
@@ -51,9 +51,9 @@ transition: 0.5;
   font-weight: bold;
   display: grid;
   justify-content: end;
- border-color: black;
+  border-color: black;
 
- padding-right: 11%;
+  padding-right: 11%;
   border-radius: 15px 20px 11px;
 }
 
@@ -65,6 +65,8 @@ li{
  font-weight: bolder;
 }
 
-.text{
+textarea{
   background-color: aqua;
+  border-radius: 16px;
+  
 }
