update comment on steps to complete && UI style for header input

--- a/src/component/NoteInputStyle.css
+++ b/src/component/NoteInputStyle.css
@@ -68,5 +68,8 @@ li{
 textarea{
   background-color: aqua;
   border-radius: 16px;
-  
+}
+
+title{
+  font-family: 'Courier New', Courier, monospace;
 }
