--- a/src/component/NoteInputStyle.css
+++ b/src/component/NoteInputStyle.css
@@ -72,8 +72,11 @@ li{
 }
 
 textarea{
-  background-color: aqua;
+  background-color: white;
   border-radius: 16px;
+  width: 279px;
+  height: 198px;
+  justify-content: right;
 }
 
 title{
