--- a/src/component/NoteInputStyle.css
+++ b/src/component/NoteInputStyle.css
@@ -14,7 +14,7 @@ html{
 .button{
   display: inline-block;
   border-radius: 150px 25px;
-  background-color: bisque;
+  background-color: rgb(53, 53, 68);
   border: none;
   color:cadetblue;
   text-align:center;
@@ -40,7 +40,7 @@ opacity: 0;
 top: 0;
 right: -20px;
 transition: 0.5;  
-background-color: bisque;
+
 }
 .button:hover span {
   padding-right: 35px;
@@ -51,6 +51,14 @@ background-color: bisque;
   right: 0;
 }
 
+.addOn{
+  background: rgb(53, 53, 68);
+  cursor: pointer;
+ padding: 10px;
+ width: 100px;
+ color: azure;
+ font-family:'Courier New', Courier, monospace;
+}
 
 .noteHeader{
   font-family:Arial, Helvetica, sans-serif;
@@ -77,6 +85,7 @@ textarea{
   width: 279px;
   height: 198px;
   justify-content: right;
+  font-family:Arial, Helvetica, sans-serif;
 }
 
 title{
